; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bootloader_support/test/extr_test_verify_image.c_check_label_search.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bootloader_support/test/extr_test_verify_image.c_check_label_search.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"%d) %s  |  %s \0A\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"Test failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_label_search(i32 %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca [17 x i8], align 16
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = bitcast [17 x i8]* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %11, i8 0, i64 17, i1 false)
  %12 = getelementptr inbounds [17 x i8], [17 x i8]* %9, i64 0, i64 0
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @strncpy(i8* %12, i8* %13, i32 16)
  %15 = load i8*, i8** %6, align 8
  %16 = getelementptr inbounds [17 x i8], [17 x i8]* %9, i64 0, i64 0
  %17 = call i32 @bootloader_common_label_search(i8* %15, i8* %16)
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %8, align 4
  %20 = icmp ne i32 %18, %19
  br i1 %20, label %21, label %26

21:                                               ; preds = %4
  %22 = load i32, i32* %5, align 4
  %23 = load i8*, i8** %6, align 8
  %24 = getelementptr inbounds [17 x i8], [17 x i8]* %9, i64 0, i64 0
  %25 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %22, i8* %23, i8* %24)
  br label %26

26:                                               ; preds = %21, %4
  %27 = load i32, i32* %10, align 4
  %28 = load i32, i32* %8, align 4
  %29 = icmp eq i32 %27, %28
  %30 = zext i1 %29 to i32
  %31 = call i32 @TEST_ASSERT_MESSAGE(i32 %30, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @strncpy(i8*, i8*, i32) #2

declare dso_local i32 @bootloader_common_label_search(i8*, i8*) #2

declare dso_local i32 @printf(i8*, i32, i8*, i8*) #2

declare dso_local i32 @TEST_ASSERT_MESSAGE(i32, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
